--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav a {
   background-color: #087f5b;
   color: #fff;
   padding: 8px 16px;
-  border-radius: 15px;
+  border-radius: 12px;
 
   display: inline-block;
 }
@@ -100,6 +100,7 @@ h2 {
   font-weight: 500;
 
   display: inline-block;
+  border-radius: 100px; /* 100px is maximum */
 }
 
 .btn:hover,
@@ -115,6 +116,10 @@ h2 {
 .btn--small {
   font-size: 14px;
   padding: 8px 12px;
+}
+
+img {
+  border-radius: 12px;
 }
 
 /* ------------------------ */
@@ -139,6 +144,8 @@ h1 {
   line-height: 1.1;
   letter-spacing: -1px;
   /* 44 / 52 / 62 */
+
+  /* text-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); */
 }
 
 .header-text {
@@ -175,6 +182,7 @@ img {
   background-color: #087f5b;
   color: #fff;
   padding: 24px;
+  border-radius: 12px;
 }
 
 .testimonial-box {
@@ -195,6 +203,17 @@ img {
 }
 
 /* CHAIRS */
+.chair {
+  box-shadow: 0 20px 30px 0px rgba(0, 0, 0, 0.07);
+  border-radius: 12px;
+}
+
+.chair img {
+  border-radius: 12px 12px 0px 0px;
+  /* border-bottom-left-radius: 0; */
+  /* border-bottom-right-radius: 0; */
+}
+
 .chair-box {
   padding: 24px;
 }
