--- a/style.css
+++ b/style.css
@@ -27,12 +27,18 @@ body {
 }
 
 nav {
+  width: 960px;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 150px 1fr;
 }
 
 nav a {
   margin-left: 30px;
+  text-decoration: none;
+}
+
+nav a:last-child {
+  margin-left: 10px;
   text-decoration: none;
 }
 
@@ -56,6 +62,24 @@ nav a {
   border-radius: 12px;
 
   display: inline-block;
+}
+
+.cart {
+  background-color: #fff;
+  color: #087f5b;
+  padding: 6px 14px;
+  border: 2px solid #087f5b;
+  border-radius: 12px;
+}
+
+.cart-icon {
+  height: 24px;
+  width: 24px;
+  margin-bottom: 3px;
+  margin-right: 5px;
+
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .contact-us:hover,
@@ -258,6 +282,50 @@ h3 {
   font-size: 20px;
 }
 
+/* Dimensions */
+
+.table {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 60px;
+}
+
+table {
+  width: 800px;
+  /* margin: 0 auto; */
+
+  /* border: 1px solid #343a40; */
+  border-collapse: collapse;
+
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+td,
+th {
+  /* border: 1px solid #343a40; */
+  padding: 16px 24px;
+  text-align: left;
+}
+
+thead tr {
+  background-color: #087f5b;
+  color: #fff;
+}
+
+thead th {
+  width: 25%;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: #f8f9fa;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #e9ecef;
+}
+
+/* FAQ */
 .accordion {
   width: 700px;
   margin: 50px auto;
@@ -330,6 +398,7 @@ h3 {
   color: #087f5b;
 }
 
+/* FOOTER */
 footer {
   margin-bottom: 48px;
   font-size: 14px;
